$NetBSD: CHANGES-2019,v 1.3099 2019/07/31 13:01:17 brook Exp $

Changes to the packages collection and infrastructure in 2019:

	Updated net/hub to 2.7.0 [leot 2019-01-01]
	Updated news/sfeed to 0.9.7 [leot 2019-01-01]
	Removed chat/xchat successor chat/hexchat [nia 2019-01-01]
	Updated finance/gnucash to 3.4 [wiz 2019-01-01]
	Updated finance/gnucash-docs to 3.4 [wiz 2019-01-01]
	Updated mail/qmail-rejectutils to 20181230nb1 [schmonz 2019-01-01]
	Added graphics/ipe version 7.2.7 [wiz 2019-01-01]
	Added emulators/dolphin-emu version 5.0 [nia 2019-01-01]
	Updated emulators/nestopia to 1.49 [nia 2019-01-01]
	Updated x11/gtk3 to 3.24.2 [leot 2019-01-01]
	Updated editors/mg to 20110905nb4 [wiz 2019-01-01]
	Updated net/gallery-dl to 1.6.2 [leot 2019-01-01]
	Updated emulators/snes9x to 1.58 [nia 2019-01-01]
	Updated emulators/snes9x-gtk to 1.58 [nia 2019-01-01]
	Updated finance/gnucash-docs to 3.4.0.1 [wiz 2019-01-01]
	Updated chat/gajim to 1.1.1 [nia 2019-01-01]
	Updated chat/gajim-plugin-omemo to 2.6.25 [nia 2019-01-01]
	Updated editors/kate to 4.14.3nb15 [gutteridge 2019-01-01]
	Added www/py-soupsieve version 1.6.1 [adam 2019-01-02]
	Updated www/py-beautifulsoup4 to 4.7.0 [adam 2019-01-02]
	Updated graphics/py-Pillow to 5.4.0 [adam 2019-01-02]
	Updated www/py-cheroot to 6.5.4 [adam 2019-01-02]
	Added emulators/libretro-mame2010 version 20180417 [nia 2019-01-02]
	Updated misc/rhash to 1.3.7 [adam 2019-01-02]
	Updated archivers/zstd to 1.3.8 [adam 2019-01-02]
	Updated devel/py-jupyter_client to 5.2.4 [adam 2019-01-02]
	Updated www/py-notebook to 5.7.4 [adam 2019-01-02]
	Updated x11/tint2 to 16.6.1 [tnn 2019-01-02]
	Updated devel/py-llvmlite to 0.27.0 [adam 2019-01-02]
	Updated math/py-numba to 0.42.0 [adam 2019-01-02]
	Updated devel/scons to 3.0.2 [tnn 2019-01-02]
	Updated textproc/serd to 0.30.0 [bsiegert 2019-01-02]
	Updated textproc/sord to 0.16.2 [bsiegert 2019-01-02]
	Updated emulators/libretro-ppsspp to 1.7.5 [nia 2019-01-02]