@@ -1,0 +1,3 @@
+Infrastructure for extended formulas with multiple parts on the
+right-hand side and/or multiple responses on the left-hand side (see
+<DOI:10.18637/jss.v034.i01>).
