@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:03:21 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/Formula/
+COMMENT=	Extended model formulas
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+R_PKGNAME=	Formula
+R_PKGVER=	1.2-3
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
