@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:03:21 brook Exp $
+
+SHA1 (R/Formula_1.2-3.tar.gz) = 8a399e67a1d215a0491c467b06bc0537d7a5a2a7
+RMD160 (R/Formula_1.2-3.tar.gz) = 040a3ce69de11b0f3476e463b76f2fa2a5352542
+SHA512 (R/Formula_1.2-3.tar.gz) = 4ca08831fd1d405df64cfc4dd2f4fe6d170a7533faf6d17f74a51dce600cbe7162c583095650c409ee544caf12d5d144c05909a257e9cfc912f924a4da645b26
+Size (R/Formula_1.2-3.tar.gz) = 151340 bytes
