@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3099 2019/07/31 13:01:17 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3100 2019/07/31 13:03:20 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5056,3 +5056,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated games/openttd to 1.9.2 [nia 2019-07-31]
 	Added graphics/R-effects version 4.1.1 [brook 2019-07-31]
 	Added graphics/R-viridis version 0.5.1 [brook 2019-07-31]
+	Added math/R-Formula version 1.2.3 [brook 2019-07-31]
